Remove obsolete mandatory attribute
Remove obsolete mandatory attribute for radioButton macro

--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assigment_config_form.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assigment_config_form.html
@@ -11,7 +11,7 @@
 						<#else>
 							<#assign checked=false>
 						</#if>
-						<@radioButton name="providerName" value='${provider.getName()}' mandatory=true labelKey='#i18n{${provider.getLabelKey()}}' checked=checked />
+						<@radioButton name="providerName" value='${provider.getName()}' labelKey='#i18n{${provider.getLabelKey()}}' checked=checked />
 					</#list>
 				</#if>
 			</@formGroup>
