Fixes sonar issues

--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assigment_form.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assigment_form.html
@@ -1,4 +1,4 @@
-<div class="row" >
+<@row>
 	<#if list_user_selection?has_content>
 		<@formGroup labelFor="user_selection_id" labelKey="#i18n{module.workflow.userassignment.task.user.labelUserSelection}">
 			<#if list_user_selection?size == 1>
@@ -23,4 +23,4 @@
 			</@staticText>
 		</@formGroup>
 	</#if>
-</div>
+</@row>
