--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assignment_information.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assignment_information.html
@@ -1,1 +1,1 @@
-<b>#i18n{module.workflow.userassignment.task.user.assign.information.description}</b> <i class="fa fa-arrow-right" aria-hidden="true"></i> <b>${taskInformation.get( "ASSIGNED_USER_LASTNAME" )!''} ${taskInformation.get( "ASSIGNED_USER_NAME" )!''} </b>
+<b>#i18n{module.workflow.userassignment.task.user.assign.information.description}</b> <@icon style='arrow-right' /> <b>${taskInformation.get( "ASSIGNED_USER_LASTNAME" )!''} ${taskInformation.get( "ASSIGNED_USER_NAME" )!''} </b>
