--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assigment_config_form.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assigment_config_form.html
@@ -1,8 +1,6 @@
-<div class="row">
-	<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-		<fieldset>
-			<legend> #i18n{module.workflow.userassignment.task.user.assign.config.title}</legend>
-			
+<@row>
+	<@columns xs=12 sm=12 md=12 lg=12>
+		<@fieldSet legend='#i18n{module.workflow.userassignment.task.user.assign.config.title}'>
 			<@formGroup labelFor="providerName" labelKey="#i18n{module.workflow.userassignment.task.user.assign.config.user.choice}">
 				<#if provider_list?has_content>
 					<#list provider_list as provider>
@@ -15,6 +13,6 @@
 					</#list>
 				</#if>
 			</@formGroup>
-		</fieldset>
-	</div>
-</div>
+		</@fieldSet>
+	</@columns>
+</@row>
