--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_unassigment_form.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_unassigment_form.html
@@ -1,26 +1,24 @@
-<@row>
-	<#if list_user_selection?has_content>
-		<@formGroup labelFor="user_selection_id" labelKey="#i18n{module.workflow.userassignment.task.user.labelUnassignUserSelection}">
-			<#if list_user_selection?size == 1>
+<#if list_user_selection?has_content>
+	<@formGroup labelFor="user_selection_id" labelKey="#i18n{module.workflow.userassignment.task.user.labelUnassignUserSelection}">
+		<#if list_user_selection?size == 1>
+			<#list list_user_selection as user_selection >
+				<@input type='hidden' name='user_selection_id' value='${user_selection.userId}' />
+				<@staticText>
+					${user_selection.firstName} ${user_selection.lastName}
+				</@staticText>
+			</#list>
+		<#else>
+			<@select id='user_selection_id' name='user_selection_id'>
 				<#list list_user_selection as user_selection >
-					<input type="hidden" name="user_selection_id" value="${user_selection.userId}" />
-					<@staticText>
-			           	${user_selection.firstName} ${user_selection.lastName}
-			        </@staticText>
+					<option value="${user_selection.userId}"> ${user_selection.firstName} ${user_selection.lastName}</option>
 				</#list>
-			<#else>
-				<select id="user_selection_id" name="user_selection_id" class="form-control">
-					<#list list_user_selection as user_selection >
-						<option value="${user_selection.userId}"> ${user_selection.firstName} ${user_selection.lastName}</option>
-					</#list>
-				</select>
-			</#if>
-		</@formGroup>
-	<#else>
-		<@formGroup>
-			<@staticText >
-				<em>#i18n{module.workflow.userassignment.task.user.noUnitSelection}</em>
-			</@staticText>
-		</@formGroup>
-	</#if>
-</@row>
+			</@select>
+		</#if>
+	</@formGroup>
+<#else>
+	<@formGroup>
+		<@staticText>
+			<em>#i18n{module.workflow.userassignment.task.user.noUnitSelection}</em>
+		</@staticText>
+	</@formGroup>
+</#if>
