--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_unassignment_information.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_unassignment_information.html
@@ -1,1 +1,1 @@
-<b>#i18n{module.workflow.userassignment.task.user.unassign.information.description}</b> : ${taskInformation.get( "UNASSIGNOR" )!''}
+<strong>#i18n{module.workflow.userassignment.task.user.unassign.information.description}</strong> : ${taskInformation.get( "UNASSIGNOR" )!''}
