--- a/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assignment_notification_config.html
+++ b/webapp/WEB-INF/templates/admin/plugins/workflow/modules/userassignment/task_user_assignment_notification_config.html
@@ -17,5 +17,24 @@
 <@formGroup labelKey='#i18n{module.workflow.userassignment.task_user_assignment_notification.config.labelMessage}' helpKey='#i18n{module.workflow.userassignment.task_user_assignment_notification.config.labelMessageHelp}'>
 	<@input type='textarea' name='message' value='${(config.message)!}' rows=6 cols=100 richtext=true mandatory=mandatory >${(config.message)!}</@input>
 </@formGroup>
+<@div class='col-sm-6'>
+	<h3>#i18n{module.workflow.userassignment.markers.label_table_title}</h3>
+	<@table>
+		<tr>
+			<th>#i18n{module.workflow.userassignment.markers.label_description}</th>
+			<th>#i18n{module.workflow.userassignment.markers.label_marker}</th>
+			<th>#i18n{module.workflow.userassignment.markers.label_copy}</th>
+		</tr>
+		<#if email_markers?exists>
+			<#list email_markers as marker>
+				<tr>
+					<td class='marker'>${marker.name!''}</td>
+					<td class='marker'>&#36;&#123;${marker.code!}&#33;&#125;</td>
+					<td><@icon style='copy' title='Copy line' /></td>
+				</tr>
+			</#list>
+		</#if>
+	</@table>
+</@div>
 <#include "/admin/util/editor/editor.html" />
 <@initEditor />
